# projec_p2

./: .gitignore  Cargo.toml  README.md  build.rs  cplib.sh  run.sh
examples/: input.txt
python/: figures.py  main.py  requirements.txt
src/: ast.rs  lib.rs  linalg.rs  main.rs  proj.rs  repenser.lalrpop
