[package]
name = "projec_p2"
version = "0.3.0"
authors = ["papanumba"]
edition = "2021"
description = "A small projective plane (RP²) grapher"
repository = "https://github.com/papanumba/projec_p2"
license = "GPL-3.0"
build = "build.rs"

[lib]
name = "projec_p2"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
lalrpop-util = { version = "0.20", features = ["lexer"] }
regex = "1.8.4"

[build-dependencies]
lalrpop = "0.20"

[profile.release]
lto = true
strip = true
